# nexusBrain

./: .env  .replit  ANALYTICS_DASHBOARD_README.md  ANALYTICS_IMPLEMENTATION_SUMMARY.md  ANALYTICS_INDIA_TIMEZONE_UPDATE.md  ANALYTICS_QUICK_START.md  ANALYTICS_VISUAL_GUIDE.md  API_PAGES_RESPONSIVE_UPDATE.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_QUICK_REFERENCE.md  CACHE_FIX_SUMMARY.md  CACHE_WORKSPACE_FIX.md  CACHING_SYSTEM_REQUIREMENTS.md  CHATBOT_DOCUMENTATION.md  CHATBOT_MESSAGES_REFACTOR.md  CHATBOT_QUICK_REFERENCE.md  CHATBOT_RESPONSIVE_UPDATE.md  CHAT_PLAYGROUND_ARCHITECTURE.md  CHAT_PLAYGROUND_CACHE_UPDATE.md  CHAT_PLAYGROUND_DOCUMENTATION.md  CHAT_PLAYGROUND_QUICK_REFERENCE.md  CHAT_PLAYGROUND_REFACTOR_SUMMARY.md  CHAT_PLAYGROUND_RICH_CONTENT.md  CHAT_PLAYGROUND_THEME_FIX.md  COMING_SOON_SLIDER.md  COMPLETE_LLM_ROUTES_CHANGES.md  CONTEXTUAL_RAG_IMPLEMENTATION.md  CONTEXTUAL_RAG_SUMMARY.md  EMOJI_INPUT_UPDATE.md  FAVICON_IMPLEMENTATION.md  LANDING_PAGE_ARCHITECTURE.md  LANDING_PAGE_ENHANCEMENTS.md  LANDING_PAGE_IMPLEMENTATION.md  LANDING_PAGE_QUICK_REFERENCE.md  LANDING_PAGE_SUMMARY.md  LANDING_PAGE_VISUAL_GUIDE.md  MIGRATION_GUIDE.md  MODELS_ARRAY_UPDATE.md  MODEL_CONFIGURATION_FEATURE.md  MODEL_CONFIG_CACHING.md  (+48 more)
attached_assets/: Pasted--1-Threshold-Handling-During-Token-Generation-At-the-time-of-token-generation-when-user--1758956189492_1758956189492.txt  Pasted--Parameter-What-It-Does--1758738791606_1758738791607.txt  Pasted--architecture-input-modalities-t-1758893159725_1758893159727.txt  (+11 more)
client/: 401_HANDLING_IMPLEMENTATION.md  API_CLIENT_USAGE_GUIDE.md  (+7 more)
(+181 files in other folders)
