[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.1",
    "bcrypt>=4.3.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sendgrid>=6.12.4",
    "sqlalchemy>=2.0.43",
]
